-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.0 Beta1
-
None
-
Windows 7 x64
Using Win7.1 SDK & VS2010
-
993907d29925e5d436de8f4d3b15fc74511c2e67
Building Qt statically from Git fails due to _DllMain@12 being multiply defined (in libGLESv2.lib and libEGL.lib).
The Problem was obviously introduced in a7d093e740b1e20874 when the bundled ANGLE code was upgraded to 1.3. The patch 0004-Make-it-possible-to-link-ANGLE-statically-for-single.patch was ported incorrectly. It used to contain the lines #ifndef QT_OPENGL_ES_2_ANGLE_STATIC in src/3rdparty/angle/src/libEGL/main.cpp and src/3rdparty/angle/src/libGLESv2/main.cpp which prevented the two DllMain()-functions to be compiled.
These lines were removed in the update, which results in the DllMain-functions to exist in both static libraries libGLESv2.lib and libEGL.lib.
Concerning the affected versions I assume version 5.3.0 beta1 corrensponds to the current stable branch (06d2b3a720c1). v.5.3.0-beta1 has not been tagged yet in git.
| For Gerrit Dashboard: QTBUG-37842 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 81998,1 | ANGLE: Don't export DLLMain functions for static builds | stable | qt/qtbase | Status: MERGED | +2 | 0 |